# UC26_Intro_Cloud_Computing

./: .gitignore  README.md  index.html
.github/workflows/: azure-static-web-apps-icy-plant-04b4d1b0f.yml  azure-static-web-apps-jolly-flower-099712b0f.yml
assignment1/: index.html
assignment1/api/: package.json
assignment1/api/getStudents/: index.js
assignment2/: README.md  run_app.sh
assignment2/backend/: README.md  pyproject.toml
assignment2/backend/app/: crud.py  database.py  main.py  models.py  schemas.py
assignment2/backend/app/routers/: users.py
assignment2/backend/data/: users.db
assignment2/frontend/: README.md  astro.config.mjs  package-lock.json  package.json
assignment2/frontend/src/components/: login-form.tsx  signup-form.tsx  user-dashboard.tsx
assignment2/frontend/src/lib/: api.ts
assignment2/frontend/src/pages/: index.astro  main-page.astro  signin-page.astro  signup-page.astro
assignment3/: .dockerignore  Dockerfile  README.md  docker-compose.yml  script.py  swarm_output.txt
assignment3/data/output/: result.txt
assignment4/: README.md  pyproject.toml  pyspark.ipynb  tran2tp.ipynb  tran2tp_Spark.ipynb  tran2tp_results.txt
assignment6/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  app.py  chat.py  config.py  knowledge.json  pyproject.toml
assignment6/deployment/: run-app.sh  setup-docker.sh  setup-gce.sh
assignment6/static/: script.js  style.css
assignment6/templates/: index.html
